fix projects section z-index

--- a/src/components/ProjectItem/ProjectItem.module.scss
+++ b/src/components/ProjectItem/ProjectItem.module.scss
@@ -107,6 +107,10 @@
     max-height: 50vh;
   }
 
+  &__index {
+    position: static;
+  }
+
   @media (min-width: 768px) {
     &__link {
       max-width: 80%;
