--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -1,4 +1,7 @@
 .projects {
+  position: relative;
+  z-index: 1;
+
   @media (min-width: 990px) {
     &__list {
       display: grid;
